updated jvm settings